--- a/mobile1.html
+++ b/mobile1.html
@@ -9,8 +9,10 @@
 <script>
 var mqtt;
 		var reconnectTimeout = 2000;
-		var host="mqtt.eclipseprojects.io"; //change this
-		var port=443;
+		//var host="mqtt.eclipseprojects.io"; //change this
+		//var port=443;
+		var host = "test.mosquitto.org";
+		var port = 1883;
 	        var random1 = Math.floor(Math.random() * 500) + 1;
 		function onConnect() {
 			// Once a connection has been made, make a subscription and send a message.
