--- a/mobile3.html
+++ b/mobile3.html
@@ -43,7 +43,7 @@
 			console.log("onMessageArrived:"+message.payloadString); 
 			if(message.destinationName == "iotusersclub/"+random1)
 			    document.getElementById("demo1").innerHTML = message.payloadString;
-			else
+			if(message.destinationName == "iotusersclub/public")
 			   document.getElementById("demo2").innerHTML = message.payloadString;
 			
 		}
